--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,25 +97,26 @@ jobs:
       uses: actions/checkout@v4  # https://github.com/actions/checkout
 
 
-    - name: "Install: JDK ${{ env.JAVA_VERSION }} ☕"
+    - name: "Install: JDK 21 ☕"  # to run example unit tests
       uses: actions/setup-java@v4  # https://github.com/actions/setup-java
+      id: setup-java-21
       with:
         distribution: temurin
-        java-version: ${{ env.JAVA_VERSION }}
+        java-version: 21
 
 
-    # reusing CDS archives of the same JVM randomly fails in GitHub Actions with
-    # "An error has occurred while processing the shared archive file. shared class paths mismatch"
-    #- name: Calculate Java version checksum
-    #  id: java-version-checksum
-    #  run: |
-    #    echo "md5sum=$(java -version 2>&1 | md5sum | cut -f1 -d" ")" >> $GITHUB_OUTPUT
-    #- name: Cache Java CDS archive
-    #  uses: actions/cache@v3
-    #  with:
-    #    path: |
-    #      ~/.xshare/${{ steps.java-version-checksum.outputs.md5sum }}
-    #    key: ${{ runner.os }}-xshare-${{ steps.java-version-checksum.outputs.md5sum }}
+    - name: "Install: JDK 17 ☕"  # to run Maven and plugins and compile test project
+      uses: actions/setup-java@v4  # https://github.com/actions/setup-java
+      id: setup-java-17
+      with:
+        distribution: temurin
+        java-version: 17
+
+
+    - name: Set JAVA_HOME env vars
+      run: |
+        echo "JAVA17_HOME=${{ steps.setup-java-17.outputs.path }}" >> $GITHUB_ENV
+        echo "JAVA21_HOME=${{ steps.setup-java-21.outputs.path }}" >> $GITHUB_ENV
 
 
     - name: "Cache: Maven Binary"
