--- a/src/test/project/pom.xml
+++ b/src/test/project/pom.xml
@@ -18,8 +18,10 @@
   <artifactId>vegardit-maven-parent.test</artifactId>
 
   <properties>
-    <maven.deploy.skip>true</maven.deploy.skip>
     <java.version.unit-tests>21</java.version.unit-tests>
+
+    <maven.deploy.skip>true</maven.deploy.skip>
+    <central-publishing-maven-plugin.excludedArtifacts>${project.artifactId}</central-publishing-maven-plugin.excludedArtifacts>
   </properties>
 
   <dependencyManagement>
