feat: configure ecj to use .settings/org.eclipse.jdt.core.prefs

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ _LOCAL/
 .classpath
 .factorypath
 .project
-.settings/
+**/.settings/*
+!**/.settings/
+!**/.settings/org.eclipse.jdt.core.prefs
 bin/
 **/.*.md.html
 
